kubernetes/resilience-tests/product-virtual-service-with-delay.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: product-vs
spec:
  hosts:
    - product
  http:
  - route:
    - destination:
        host: product
    fault:
      delay:
        fixedDelay: 3s
        percent: 100
