kubernetes/resilience-tests/product-virtual-service-with-faults.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: product-vs
spec:
  hosts:
    - product
  http:
  - route:
    - destination:
        host: product
    fault:
      abort:
        httpStatus: 500
        percent: 20
